--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -1,6 +1,6 @@
 .profile__about {
   display: grid;
-  grid-template-columns: 300px 50px;
+  grid-template-columns: 293px 50px;
 }
 
 @media screen and (max-width: 429px) {
